# dsdk-facet-rs

./: .dockerignore  .gitignore  Cargo.toml
.config/: nextest.toml
.github/: dependabot.yml
.github/workflows/: docker-publish.yaml  rust.yml
crates/facet-core/: Cargo.toml
crates/facet-core/src/: lib.rs
crates/facet-core/src/auth/tests/: mem.rs  mod.rs
crates/facet-core/src/jwt/: did.rs  generator.rs  jwtutils.rs  mod.rs  resolver.rs  test_fixtures.rs
crates/facet-core/src/jwt/tests/: common.rs  did.rs  generator.rs  local.rs  mod.rs  resolver.rs  vault_jwt_generator.rs  vault_signing_key_resolver.rs  verifier.rs
crates/facet-core/src/lock/tests/: mem.rs
crates/facet-core/src/token/: mod.rs
crates/facet-core/src/token/client/: mem.rs  mod.rs  oauth.rs  vault.rs
crates/facet-core/src/token/client/tests/: api_create_token.rs  api_get_token.rs  mem.rs  mocks.rs  mod.rs  oauth.rs  vault.rs
crates/facet-core/src/token/manager/: mem.rs  mod.rs
crates/facet-core/src/token/manager/tests/: mem.rs  mod.rs  token_manager.rs
crates/facet-core/src/util/: crypto.rs  mod.rs  task.rs
crates/facet-core/src/util/tests/: crypto.rs  mod.rs
crates/facet-core/src/vault/: mod.rs
crates/facet-core/tests/: token_api.rs
crates/facet-hashicorp-vault/: Cargo.toml
crates/facet-hashicorp-vault/src/: client.rs  renewal.rs
crates/facet-hashicorp-vault/src/tests/: client.rs  mod.rs
crates/facet-hashicorp-vault/tests/: vault_hashicorp.rs  vault_hashicorp_renewal.rs  vault_signing.rs
crates/facet-hashicorp-vault/tests/common/: mod.rs
crates/facet-postgres/: Cargo.toml
crates/facet-postgres/src/: lib.rs  renewable_token_store.rs  token.rs
crates/facet-postgres/tests/: auth_postgres.rs  lock_manager_postgres.rs  renewable_token_store_postgres.rs  token_store_postgres.rs
crates/facet-proxy/src/s3/: mod.rs
crates/facet-proxy/tests/: proxy_s3.rs  proxy_s3_auth.rs  proxy_s3_error_prop.rs
crates/facet-proxy/tests/common/: mocks.rs  mod.rs  proxy_s3.rs
crates/facet-test-utils/: Cargo.toml
crates/facet-test-utils/src/: lib.rs
crates/facet-testcontainers/src/: keycloak.rs  utils.rs
e2e/: Cargo.toml  Makefile  README.md
e2e/manifests/: consumer-did.yaml  postgres-deployment.yaml  service-accounts.yaml  siglet-config.yaml  siglet-deployment.yaml  siglet-service.yaml  test-pod.yaml  vault-agent-config.yaml
e2e/scripts/: build-and-load-image.sh  build-and-load-siglet.sh  build-test-client.sh  configure-vault.sh  setup-consumer-did.sh  setup.sh
e2e/src/: lib.rs  utils.rs
e2e/src/fixtures/: consumer_did.rs  mod.rs  postgres.rs  siglet.rs  vault.rs
e2e/src/tests/: mod.rs  siglet.rs  siglet_e2e.rs  vault_sidecar.rs
e2e/src/utils/: kubectl.rs  mod.rs  wait.rs
e2e/test-client/: Dockerfile  Dockerfile.chef  Dockerfile.full
siglet/: .dockerignore  Cargo.toml  Dockerfile  Dockerfile.chef  Dockerfile.local  Dockerfile.test
siglet/src/: config.rs  error.rs  handler.rs  lib.rs  main.rs
siglet/src/assembly/: mod.rs
siglet/src/assembly/tests/: mod.rs
siglet/src/config/: mod.rs
siglet/src/config/tests/: mod.rs
siglet/src/handler/: mod.rs
siglet/src/handler/refresh/: error.rs  mod.rs
siglet/src/handler/signaling/: mod.rs
siglet/src/handler/tests/: mod.rs
siglet/src/server/: mod.rs
siglet/tests/: handler_integration.rs  refresh_handler_integration.rs  signaling_handler_integration.rs  token_handler_integration.rs
(+6 files in other folders)
