[package]
name = "dsdk-facet-e2e-tests"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
tokio = { workspace = true }
anyhow = "1.0"
base64 = { workspace = true }
dsdk-facet-testcontainers = { path = "../crates/facet-testcontainers" }
serde_json = { workspace = true }
reqwest = "0.12"

[dev-dependencies]

[features]
# Feature flag to enable E2E tests
# Run with: cargo test --package dsdk-facet-e2e-tests --features e2e
e2e = []
