[package]
name = "dsdk-facet-core"
version.workspace = true
edition.workspace = true

[features]
test-fixtures = []

[dependencies]
bon = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
sodiumoxide = { workspace = true }
hex = { workspace = true }
serde = { workspace = true }
jsonwebtoken = { workspace = true, features = ["rust_crypto"] }
serde_json = { workspace = true }
rand = { workspace = true }
ed25519-dalek = { workspace = true }
pkcs8 = { workspace = true }
rsa = { workspace = true }
async-trait = { workspace = true }
http = { workspace = true }
pingora = { workspace = true }
regex = { workspace = true }
url = "2.5"
tokio = { workspace = true }
reqwest = { workspace = true }
log = { workspace = true }
base64 = { workspace = true }
bs58 = { workspace = true }
sha2 = { workspace = true }
hmac = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
dsdk-facet-test-utils = { path = "../facet-test-utils" }
dsdk-facet-testcontainers = { path = "../facet-testcontainers" }
dsdk-facet-postgres = { path = "../facet-postgres" }
tokio = { workspace = true }
reqwest = { workspace = true }
wiremock = { workspace = true }
once_cell = { workspace = true }
mockall = { workspace = true }
rstest = { workspace = true }
bs58 = { workspace = true }

[lints]
workspace = true
