[package]
name = "dsdk-facet-hashicorp-vault"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
dsdk-facet-core = { path = "../facet-core" }
bon = { workspace = true }
rand = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
log = { workspace = true }
reqwest = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
base64 = { workspace = true }
bs58 = { workspace = true }
notify = "6.1"


[dev-dependencies]
dsdk-facet-test-utils = { path = "../facet-test-utils" }
wiremock = { workspace = true }
dsdk-facet-testcontainers = { path = "../facet-testcontainers" }
tempfile = "3"

[lints]
workspace = true
